# crazyflie_navigation

./: README.md
crazyflie-firmware/: README.md
crazyflie-firmware/crazyflie-firmware-version-2020-02/: manifest.json  (+1 more)
dfall_ws/src/dfall_pkg/: CMakeLists.txt  PPS.perspective  package.xml
dfall_ws/src/dfall_pkg/GUI_Qt/flyingAgentGUI/: flyingAgentGUI.pro  flyingagentgui.qrc
dfall_ws/src/dfall_pkg/GUI_Qt/flyingAgentGUI/forms/: connectstartstopbar.ui  controllerstatusbanner.ui  controllertabs.ui  coordinator.ui  coordinatorrow.ui  csonecontrollertab.ui  defaultcontrollertab.ui  enablecontrollerloadyamlbar.ui  mainwindow.ui  pickercontrollertab.ui  remotecontrollertab.ui  safecontrollertab.ui  studentcontrollertab.ui  templatecontrollertab.ui  topbanner.ui  tuningcontrollertab.ui  tutorialcontrollertab.ui
dfall_ws/src/dfall_pkg/GUI_Qt/flyingAgentGUI/include/: Constants_for_Qt_compile.h  PickerControllerConstants_for_Qt_compile.h  connectstartstopbar.h  controllerstatusbanner.h  controllertabs.h  coordinator.h  coordinatorrow.h  csonecontrollertab.h  defaultcontrollertab.h  enablecontrollerloadyamlbar.h  mainwindow.h  pickercontrollertab.h  remotecontrollertab.h  rosNodeThread_for_flyingAgentGUI.h  safecontrollertab.h  studentcontrollertab.h  templatecontrollertab.h  topbanner.h  tuningcontrollertab.h  tutorialcontrollertab.h
dfall_ws/src/dfall_pkg/GUI_Qt/flyingAgentGUI/src/: connectstartstopbar.cpp  controllerstatusbanner.cpp  controllertabs.cpp  coordinator.cpp  coordinatorrow.cpp  csonecontrollertab.cpp  defaultcontrollertab.cpp  enablecontrollerloadyamlbar.cpp  main.cpp  mainwindow.cpp  pickercontrollertab.cpp  remotecontrollertab.cpp  rosNodeThread_for_flyingAgentGUI.cpp  safecontrollertab.cpp  studentcontrollertab.cpp  templatecontrollertab.cpp  topbanner.cpp  tuningcontrollertab.cpp  tutorialcontrollertab.cpp
dfall_ws/src/dfall_pkg/GUI_Qt/systemConfigGUI/: systemConfigGUI.pro  systemconfiggui.qrc
dfall_ws/src/dfall_pkg/GUI_Qt/systemConfigGUI/forms/: mainguiwindow.ui
dfall_ws/src/dfall_pkg/GUI_Qt/systemConfigGUI/include/: CFLinker.h  centerMarker.h  channelLUT.h  constants_for_qt_compile.h  cornergrabber.h  crazyFly.h  crazyFlyZone.h  crazyFlyZoneTab.h  globalDefinitions.h  mainguiwindow.h  marker.h  myGraphicsRectItem.h  myGraphicsScene.h  myGraphicsView.h  rosNodeThread_for_systemConfigGUI.h  tablePiece.h
dfall_ws/src/dfall_pkg/GUI_Qt/systemConfigGUI/src/: CFLinker.cpp  centerMarker.cpp  channelLUT.cpp  cornergrabber.cpp  crazyFly.cpp  crazyFlyZone.cpp  crazyFlyZoneTab.cpp  main.cpp  mainguiwindow.cpp  marker.cpp  myGraphicsRectItem.cpp  myGraphicsScene.cpp  myGraphicsView.cpp  rosNodeThread_for_systemConfigGUI.cpp  tablePiece.cpp
dfall_ws/src/dfall_pkg/crazyradio/: CrazyRadio.py
dfall_ws/src/dfall_pkg/crazyradio/examples/cache/: CA011AD2.json
dfall_ws/src/dfall_pkg/include/classes/: CrazyflieIO.h  GetParamtersAndNamespaces.h  QuadrotorSimulator.h
dfall_ws/src/dfall_pkg/include/nodes/: AgentStatusForWebInterface.h  BatteryMonitor.h  CentralManagerService.h  Constants.h  CrazyRadioEmulator.h  CsoneControllerService.h  DefaultControllerConstants.h  DefaultControllerService.h  DemoControllerService.h  FlyingAgentClient.h  MocapEmulator.h  ParameterService.h  PickerControllerConstants.h  PickerControllerService.h  RemoteControllerService.h  SafeControllerService.h  StudentControllerService.h  TemplateControllerService.h  TestMotorsControllerService.h  TuningControllerService.h  TutorialControllerService.h
dfall_ws/src/dfall_pkg/launch/: Config.sh  agent.launch  coordinator.launch  gui_for_agent.launch  master.launch  pi_agent.launch  pi_master.launch  qualisys_datastream_MWE.launch
dfall_ws/src/dfall_pkg/msg/: AreaBounds.msg  ControlCommand.msg  CrazyflieContext.msg  CrazyflieDB.msg  CrazyflieEntry.msg  CustomButton.msg  CustomButtonWithHeader.msg  DebugMsg.msg  FloatWithHeader.msg  FlyingVehicleState.msg  GyroMeasurements.msg  IntWithHeader.msg  SetpointV2.msg  SetpointWithHeader.msg  StringWithHeader.msg  ViconSubscribeObjectName.msg
dfall_ws/src/dfall_pkg/param/: BatteryMonitor.yaml  CrazyRadioConfig.yaml  Crazyflie.db  CsoneController.yaml  DefaultController.yaml  DemoController.yaml  FlyingAgentClientConfig.yaml  MocapEmulatorConfig.yaml  MpcController.yaml  PickerController.yaml  QualisysConfig.yaml  RemoteController.yaml  SafeController.yaml  StudentController.yaml  TemplateController.yaml  TuningController.yaml  TutorialController.yaml  ViconConfig.yaml  YamlFileNames.yaml
dfall_ws/src/dfall_pkg/scripts/: land_crazyflie  load_custom_controller  load_safe_controller  motors_off_crazyflie  safe_controller_setpoint  take_off_crazyflie
dfall_ws/src/dfall_pkg/src/classes/: CrazyflieIO.cpp  GetParamtersAndNamespaces.cpp  QuadrotorSimulator.cpp
dfall_ws/src/dfall_pkg/src/nodes/: AgentStatusForWebInterface.cpp  BatteryMonitor.cpp  CentralManagerService.cpp  CrazyRadioEmulator.cpp  CsoneControllerService.cpp  DefaultControllerService.cpp  DemoControllerService.cpp  FlyingAgentClient.cpp  MocapEmulator.cpp  MpcControllerService.cpp  ParameterService.cpp  PickerControllerService.cpp  RemoteControllerService.cpp  SafeControllerService.cpp  StudentControllerService.cpp  TemplateControllerService.cpp  TestMotorsControllerService.cpp  TuningControllerService.cpp  TutorialControllerService.cpp  TutorialControllerService_solution.cpp  ViconDataPublisher.cpp
dfall_ws/src/dfall_pkg/src/qualisys/: QualisysDataPublisher.py  QualisysDataPublisherMWE.py
dfall_ws/src/dfall_pkg/srv/: CMCommand.srv  CMQuery.srv  CMQueryCrazyflieName.srv  CMRead.srv  CMUpdate.srv  Controller.srv  GetDebugValuesService.srv  GetSetpointService.srv  IntIntService.srv  IntStringService.srv  LoadYamlFromFilename.srv
hardware_designs/: Connector_3point_v03.STL  Load_PM_20mmBox_v01.STL  MarkerMount_v17.STL
install/: 99-crazyradio.rules  dfall_install_git_clone_and_catkin_make.sh  dfall_install_ros_kinetic_ubuntu16.sh  dfall_install_ros_melodic_keys.sh  dfall_install_ros_melodic_ubuntu18.sh
web_interface/: install_dfall_server_WIP.sh
wiki/: README.md
wiki/faq/: faq.md
(+61 files in other folders)
